--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
     "@types/redux-thunk": "^2.1.0",
+    "install": "^0.13.0",
+    "npm": "^9.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
